syntax = "proto3";
package wiradata.inventories;

option go_package = "pb/inventories;inventories";

import "google/protobuf/timestamp.proto";
import "category_message.proto";

message ProductCategory {
  string id = 1;
  Category category = 2;
  string name = 3;
  google.protobuf.Timestamp created_at = 4;
  string created_by = 5;
  google.protobuf.Timestamp updated_at = 6;
  string updated_by = 7;
}